# sqfox

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_RU.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
demo/: bench_flat.py  obd_smart_mechanic.py  run_cogitator.py  run_crash_recovery.py  run_demo.py  run_hnsw_xray.py  run_smart_home.py  run_smart_mechanic.py
src/sqfox/: __init__.py  _auto.py  async_engine.py  chunkers.py  engine.py  manager.py  schema.py  search.py  tokenizer.py  types.py
src/sqfox/backends/: __init__.py  flat.py  hnsw.py  registry.py  sqlite_vec.py  usearch.py
tests/: conftest.py  test_async_engine.py  test_audit_fixes.py  test_auto.py  test_auto_integration.py  test_backends.py  test_chunkers.py  test_engine.py  test_integration.py  test_manager.py  test_schema.py  test_search.py  test_tokenizer.py
